# tig

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
docs/: architecture.md  comparisons.md  ideology.md  mvp.md  primitives.md  problem.md  roadmap.md  security-model.md  solution.md  workflows.md
src/: api.rs  cli.rs  git_bridge.rs  lib.rs  lock.rs  main.rs  object_store.rs  project.rs  review.rs  run.rs  snapshot.rs  types.rs  util.rs  workspace.rs
tests/: e2e_demo.sh  integration_test.rs
