[package]
name = "tig"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tempfile = "3.10"
walkdir = "2.5"
diffy = "0.4"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3.10"
