[package]
# Crate name is `tig-vcs` because `tig` is already taken on crates.io; the
# binary and library are still named `tig` (see [[bin]] and [lib] below), so
# `cargo install tig-vcs` installs a `tig` command and `use tig::...` works.
name = "tig-vcs"
version = "0.1.0"
edition = "2021"
description = "A work-first version control substrate for humans and AI coding agents — a Git alternative built around workspaces, snapshots, runs, and review units."
license = "MIT"
repository = "https://github.com/KrtinShet/tig"
homepage = "https://github.com/KrtinShet/tig"
readme = "README.md"
keywords = ["version-control", "vcs", "git-alternative", "ai-agents", "snapshots"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "tig"
path = "src/lib.rs"

[[bin]]
name = "tig"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tempfile = "3.10"
walkdir = "2.5"
diffy = "0.4"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3.10"
